--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<a href="Мореплавці.html">До сторінки "Мореплавці"</a><p>
 	<a href="Резюме.html">До сторінки "Резюме"</a><p>
 	<a href="Наука XXI століття.html">До сторінки "Наука XXI століття"</a>
-
+	<a href="рейтинги.html">До сторінки "Рейтинги мов програмування"</a>
 	
 </body>
 </html>
