Update Наука XXI століття.html

--- a/Наука XXI століття.html
+++ b/Наука XXI століття.html
@@ -6,6 +6,7 @@
 	<title>Винаходи</title>
 </head>
 <body>
+	<a href="рейтинги.html">До наступної сторінки</a><p>
 	<link rel="stylesheet" type="text/css" href="Дизайн.css">
 	<a href="index.html">На головну</a>
 	<h1 style="text-align: center">5 найбільш значущих наукових відкриттів та винаходів ХХІ століття</h1>
