--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<h3>Автор: Дяденко Назар</h3>
 	<a href="Мореплавці.html">До сторінки "Мореплавці"</a><p>
 	<a href="Резюме.html">До сторінки "Резюме"</a><p>
-	<a href="Наука XXI століття.html">До сторінки "Наука XXI століття"</a>
+	<a href="Наука XXI століття.html">До сторінки "Наука XXI століття"</a><p>
 	<a href="рейтинги.html">До сторінки "Рейтинги мов програмування"</a>
 	
 </body>
