--- a/рейтинги.html
+++ b/рейтинги.html
@@ -6,6 +6,7 @@
 	<title>Diadenko</title>
 </head>
 <body>
+	<a href="index.html">На головну</a>
 	 <h4><a href="https://dou.ua/lenta/articles/language-rating-jan-2020/">Джерело інформації</a></h4>
 	<link rel="stylesheet" type="text/css" href="123.css">
 
