--- a/Наука XXI століття.html
+++ b/Наука XXI століття.html
@@ -6,17 +6,46 @@
 	<title>Винаходи</title>
 </head>
 <body>
-	<a href="рейтинги.html">До наступної сторінки</a><p>
 	<link rel="stylesheet" type="text/css" href="Дизайн.css">
+	<a href="рейтинги.html">До наступної сторінки</a><p>
 	<a href="index.html">На головну</a>
 	<h1 style="text-align: center">5 найбільш значущих наукових відкриттів та винаходів ХХІ століття</h1>
-	<ol>
-<li>Комп'ютер</li>
-<li>Інтернет</li>
-<li>Освоєння космосу</li>
-<li>Літаки</li>
-<li>Антибіотики</li>
-</ol>
+	<section>
+		<h3>Комп'ютери</h3>
+		<img src="PC.png" width="200" height="200"><p>
+		Винахід комп'ютера і першого повноцінного мови програмування присвоюється німецькому інженеру Конраду Цузе. Перша повнофункціональна обчислювальна машина була представлена публіці в 1941 році і мала назву Z3. Потрібно зауважити, що Z3 володіла всіма властивостями, які є у комп'ютерів на сьогодні.
+		Після війни Z3, також як і попередні розробки, був знищений. Однак вцілів його послідовник Z4, з якого і почалися продажі комп'ютерів.
+	</section>
+	<section>
+		<h3>Інтернет</h3>
+		<img src="In.png" width="200" height="200"><p>
+		Спочатку інтернет замислювався Міністерством оборони США як надійний канал передачі інформації на випадок, якщо почнеться війна. Розробити першу мережу було доручено кільком науковим центрам, які в підсумку змогли створити перший сервер Arpanet. Згодом сервер став рости, і до нього підключався все більше науковців для обміну інформацією.
+		Перше віддалене підключення (на відстані 640 км) вдалося виконати Чарлі Клайну і Біллі Дювалль. Сталося це в 1969 році - саме цей день вважається днем народження інтернету. Після цієї операції сфера стала розвиватися з величезною швидкістю. У 1971 році була розроблена програма по відправці електронної, а в 1973 році мережа стала міжнародною.
+	</section>
+	<section>
+		<h3>Освоєння космосу</h3>
+		<img src="Sp.png" width="200" height="200"><p>
+		Каменем в 20 столітті у відносинах між США і Радянським Союзом було розвиток в освоєнні космосу. Перший штучний супутник був запущений СРСР 4 жовтня 1957 року.
+		Першим вченим, який висунув ідею про створення ракети, яка подорожує між планетами, був К. Ціолковський. До 1903 році він її зумів спроектувати. Головне, що було в його розробці, це створена ним швидкості літального апарату, яка застосовується до цього дня в ракетобудуванні.
+
+		Першим апаратом, котрі побували в, стала ракета V-2, запущена влітку 1944 року. Саме ця подія і заклало основу в подальше прискорити розвиток, продемонструвавши великі можливості ракет.
+
+		20 століття був багатий на всякого роду відкриття та винаходи, в чем-то поліпшили, а в чомусь ускладнили наше життя. Однак якщо задуматися, винаходів, по-справжньому змінили цей світ, було не так багато. Ми зібрали кілька най-най винаходів, після яких життя вже ніколи не буде колишньою.
+	</section>
+	<section>
+		<h3>Літаки</h3>
+		<img src="Pl.png" width="335" height="112"><p>
+		Перші польоти на апаратах легше повітря (повітроплавання) люди зробили ще в XVIII столітті, саме тоді з'явилися перші кулі, наповнені гарячим повітрям, за допомогою яких можна було виконати давню мрію людства - піднятися в повітря і парити в ньому. Однак через неможливість керування напрямком польоту, залежно від погоди і низькій швидкості повітряна куля багато в чому не влаштовував людство в якості транспорту.
+
+		Перші керовані польоти на апаратах, важчих за повітря відбулися в самому початку XX століття, коли незалежно один від одного брати Райт і Альберто Сантос-Дюмон експериментували з легкими планерами, оснащеними моторами. Саме ці літальні апарати стали прообразом пасажирських лайнерів, які через десятиліття зв'язали країни і континенти і дозволили світу стати по-справжньому глобальним, істотно прискоривши переміщення пасажирів на великі відстані і ставши одним з найважливіших винаходів 20 століття.
+	</section>
+	<section>
+		<h3>Антибіотики</h3>
+		<img src="An.png" width="200" height="200"><p>
+		У 1928 році Олександр Флемінг виявив, що на пробах, зараженої звичайної зеленою цвіллю Penicillium ,   не розвиваються колонії бактерій-стафілоколлков. Стало очевидно, що грибок виділяє речовину, згубно впливає на клітини бактерій. Це випадкове відкриття, зроблене в 20 столітті, стало одним з найбільш значущих в історії медицини, оскільки допомогло виділити спочатку пеніцилін (1938 рік), а потім і інші речовини-антибіотики, за допомогою яких виліковували смертельно небезпечні бактеріальні захворювання.
+
+		На жаль, поява антибіотиків спричинило за собою і деякі негативні наслідки, які також змінили світ. Повсюдне і не завжди обгрунтоване застосування антибіотиків призводить до того, що відомі бактерії мутують, знаходячи форми, несприйнятливі до антибіотиків. Це явище створює небезпеку для людства, оскільки ускладнює лікування заражених стійкими формами бактерій і вимагає тривалих і дорогих досліджень з пошуку нових антибіотиків.
+	</section>
 <h3><a href="https://journalovik.ru/uk/izobreteniya-konca-20-nachala-21-veka-dvenadcat-velichaishih-izobretenii.html">Джерело інформації</a></h3>
 	
 </body>
